<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/messages_list"
    android:layout_margin="@dimen/item_margin"
    android:padding="@dimen/card_margin">

    <ImageView
        android:id="@+id/msgs_user_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/user_image" />

    <TextView
        android:id="@+id/msgs_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:text="@string/username"
        android:textSize="@dimen/msg_name_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/msgs_user_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msgs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:text="@string/messages"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/msgs_user_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msgs_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/reply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>