<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChatFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/chat_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/image_margin"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <LinearLayout
            android:id="@+id/toolbar_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/toolbar_user_profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/text_margin"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/toolbar_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/username" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha=".1"
        android:scaleType="matrix"
        app:layout_constraintBottom_toBottomOf="@+id/chat_recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_toolbar" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/input_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_toolbar"
        tools:listitem="@layout/chat_item" />

    <EditText
        android:id="@+id/input_message"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        android:background="@null"
        android:ems="10"
        android:hint="@string/chat_message"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/text_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send_message"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/send_message"
        android:layout_width="80dp"
        android:layout_height="?android:actionBarSize"
        android:background="@drawable/blue_onclick_grey"
        android:gravity="center"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>